// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`email templates render against fixture vars > educationConfirmation.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <title>Confirm your Lingua Education plan</title>
    <style></style>
  </head>
  <body>
    <div class="container">
      <div class="brand">Lingua</div>
      <div class="card">
        <h1>Confirm your Education plan</h1>
        <p>Hi student@stanford.edu,</p>
        <p>You requested a free 1-year Lingua Pro Education plan. Click the button below to confirm this email belongs to you. Once confirmed, we will email you the license token.</p>
        <p><a class="button" href="https://licenses.linguacode.dev/education/confirm?confirm=11111111-2222-3333-4444-555555555555">Confirm my email</a></p>
        <p>This link expires in <strong>24 hours</strong> and can only be used once. If it expires, start the flow again from Settings → License.</p>
        <p class="muted">You are receiving this email because someone started an Education plan with this address. If it wasn't you, ignore this message — no plan is created until the link is clicked.</p>
      </div>
    </div>
  </body>
</html>
"
`;

exports[`email templates render against fixture vars > educationRenewal.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <title>Your Lingua Education plan is renewed</title>
    <style></style>
  </head>
  <body>
    <div class="container">
      <div class="brand">Lingua</div>
      <div class="card">
        <h1>Your Education plan is renewed</h1>
        <p>Hi student@stanford.edu,</p>
        <p>Your Lingua Pro Education plan has been renewed for another year. Lingua will pick up the refreshed token automatically the next time the app is online — you do not need to re-paste anything.</p>
        <p>If you switch machines, here is the latest token:</p>
        <div class="token-box">eyJsaWNlbnNlSWQiOiJsaWNfMSJ9.AAAAAAAAAAAAAAAAAAAAAA</div>
        <p>New expiry: <strong>May 13, 2026</strong>.</p>
        <p class="muted">You are receiving this email because your existing Education plan was renewed via the educational email validation flow. If this was not you, please contact support.</p>
      </div>
    </div>
  </body>
</html>
"
`;

exports[`email templates render against fixture vars > educationToken.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <title>Your Lingua Education plan is active</title>
    <style></style>
  </head>
  <body>
    <div class="container">
      <div class="brand">Lingua</div>
      <div class="card">
        <h1>Your Education plan is active</h1>
        <p>Hi student@stanford.edu,</p>
        <p>Your Lingua Pro Education plan is confirmed for the next year. Paste the token below into Settings → License inside the app, or click the button if you opened this email on the same machine where Lingua is installed.</p>
        <p><a class="button" href="lingua://license?token=eyJsaWNlbnNlSWQiOiJsaWNfMSJ9.AAAAAAAAAAAAAAAAAAAAAA">Activate Pro</a></p>
        <p>Or paste this token manually:</p>
        <div class="token-box">eyJsaWNlbnNlSWQiOiJsaWNfMSJ9.AAAAAAAAAAAAAAAAAAAAAA</div>
        <p>Your plan expires on <strong>May 13, 2026</strong>. We will email you a renewal link 30 days before then so your access does not lapse.</p>
        <p class="muted">You are receiving this email because you confirmed an Education plan request on Lingua. Each plan binds to one device — re-run the flow on a different machine if you upgrade.</p>
      </div>
    </div>
  </body>
</html>
"
`;

exports[`email templates render against fixture vars > recoveryConfirmation.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <title>Confirm your Lingua license recovery</title>
    <style></style>
  </head>
  <body>
    <div class="container">
      <div class="brand">Lingua</div>
      <div class="card">
        <h1>Confirm your license recovery</h1>
        <p>Hi,</p>
        <p>Someone requested to resend a Lingua license token to this email address. If that was you, click the button below to confirm — we will then email you the latest token for the matching license, if any.</p>
        <p><a class="button" href="https://licenses.linguacode.dev/education/confirm?confirm=11111111-2222-3333-4444-555555555555">Confirm and resend</a></p>
        <p>This link expires in <strong>24 hours</strong> and can only be used once.</p>
        <p class="muted">If you did not request this, you can safely ignore the email — nothing is sent or changed until the link is clicked.</p>
      </div>
    </div>
  </body>
</html>
"
`;

exports[`email templates render against fixture vars > recoveryToken.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <title>Your Lingua license token</title>
    <style></style>
  </head>
  <body>
    <div class="container">
      <div class="brand">Lingua</div>
      <div class="card">
        <h1>Your license token</h1>
        <p>Hi student@stanford.edu,</p>
        <p>Here is the current license token for your account. Paste it into Settings → License in the app, or click the button if you opened this email on the same machine.</p>
        <p><a class="button" href="lingua://license?token=eyJsaWNlbnNlSWQiOiJsaWNfMSJ9.AAAAAAAAAAAAAAAAAAAAAA">Activate Pro</a></p>
        <p>Or paste this token manually:</p>
        <div class="token-box">eyJsaWNlbnNlSWQiOiJsaWNfMSJ9.AAAAAAAAAAAAAAAAAAAAAA</div>
        <p>Plan: <strong>Lingua Pro</strong>. Valid until: May 13, 2026.</p>
        <p class="muted">You are receiving this email because someone confirmed a recovery request from student@stanford.edu. If this was not you, contact support to investigate.</p>
      </div>
    </div>
  </body>
</html>
"
`;

exports[`email templates render against fixture vars > trial.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <title>Your Lingua Pro trial is ready</title>
    <style></style>
  </head>
  <body>
    <div class="container">
      <div class="brand">Lingua</div>
      <div class="card">
        <h1>Your Pro trial is ready</h1>
        <p>Hi student@stanford.edu,</p>
        <p>Your free 14-day Lingua Pro trial is active. Paste the token below into Settings → License inside the app, or click the button if you opened this email on the same machine where Lingua is installed.</p>
        <p><a class="button" href="lingua://license?token=eyJsaWNlbnNlSWQiOiJsaWNfMSJ9.AAAAAAAAAAAAAAAAAAAAAA">Activate Pro</a></p>
        <p>Or paste this token manually:</p>
        <div class="token-box">eyJsaWNlbnNlSWQiOiJsaWNfMSJ9.AAAAAAAAAAAAAAAAAAAAAA</div>
        <p>Your trial expires on <strong>May 13, 2026</strong>. After that you can buy a Pro license at <a href="https://linguacode.dev">linguacode.dev</a> or apply for the free Education plan if you are a student.</p>
        <p class="muted">You are receiving this email because you started a free trial on Lingua. If this was not you, it is safe to ignore — the trial is locked to a single device and email.</p>
      </div>
    </div>
  </body>
</html>
"
`;
